--- a/index.html
+++ b/index.html
@@ -34,13 +34,21 @@
 
                     </div>
                 </div>
+
+
+                <div class="show-preview" id="showPreview"></div>
+
+
+                <div class="shows-wrapper" id="showsWrapper"></div>
+
+
             </div>
         </nav>
     </section>
 
 
 
-    <script src="./dist/js/script.min.js"></script>
+    <script type="module" src=".//src/js/script.js"></script>
 
 </body>
 
