Added few functions

--- a/index.html
+++ b/index.html
@@ -17,33 +17,43 @@
 
 
     <section class="one">
-
         <nav>
             <div class="wrapper">
                 <div class="box">
-
                     <button class="drop-btn main-btn">Most popular keywords</button>
-
                     <div class="dropdown-menu">
-
                         <button class="drop-btn" data-genre="harry">harry</button>
                         <button class="drop-btn" data-genre="queen">queen</button>
                         <button class="drop-btn" data-genre="dog">dog</button>
                         <button class="drop-btn" data-genre="fun">fun</button>
-
-
                     </div>
                 </div>
-
-
-                <div class="show-preview" id="showPreview"></div>
-
-
-                <div class="shows-wrapper" id="showsWrapper"></div>
-
-
             </div>
         </nav>
+
+        <div class="wrapper">
+
+            <div class="show-preview" id="showPreview"></div>
+
+
+            <div class="shows-wrapper" id="showsWrapper">
+
+                <div class="card">
+                    <img src="" alt="" class="card-img">
+                    <div class="card-text">
+                        <h5 class="card-title">Tytuł karty</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, iste? Lorem ipsum dolor
+                            sit.
+                        </p>
+                    </div>
+                    <button class="card-btn drop-btn">Show</button>
+                </div>
+
+            </div>
+
+
+
+        </div>
     </section>
 
 
