Added searching bar and its functionality

--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
                 <div class="box">
                     <button class="drop-btn main-btn">Most popular keywords</button>
                     <div class="dropdown-menu">
-                        <button class="drop-btn" data-genre="harry">harry</button>
-                        <button class="drop-btn" data-genre="queen">queen</button>
-                        <button class="drop-btn" data-genre="dog">dog</button>
-                        <button class="drop-btn" data-genre="fun">fun</button>
+                        <button class="drop-btn" data-genre="funny">funny</button>
+                        <button class="drop-btn" data-genre="action">action</button>
+                        <button class="drop-btn" data-genre="murder">murder</button>
+                        <button class="drop-btn" data-genre="detective">detective</button>
+                    </div>
+                    <div class="search-box">
+                        <input type="text" class="search-input" placeholder="What we search for?" id="searchInput">
+                        <button class="search-btn" data-genre="search">🔍</button>
                     </div>
                 </div>
+
             </div>
         </nav>
 
