Added working functionality of favorite based on local storage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <nav>
             <div class="wrapper">
                 <div class="box">
-                    <button class="drop-btn main-btn">Most popular keywords</button>
+
+                    <div class="button-box">
+                        <button class="drop-btn main-btn">Most popular keywords</button>
+                        <button class="drop-btn fav-btn" id="favButton">Favorites ⭐</button>
+                    </div>
                     <div class="dropdown-menu">
                         <button class="drop-btn" data-genre="funny">funny</button>
                         <button class="drop-btn" data-genre="action">action</button>
@@ -44,7 +48,8 @@
             <div class="shows-wrapper" id="showsWrapper">
 
             </div>
-
+            <div class="overlay">
+            </div>
 
 
         </div>
